--- a/Copy_of_Sample_ML_Submission_Template.ipynb
+++ b/Copy_of_Sample_ML_Submission_Template.ipynb
@@ -271,7 +271,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Write Problem Statement Here.**"
+        "Yes Bank, a significant player in the Indian financial sector, garnered widespread attention in the media following the 2018 fraud case involving its founder, Rana Kapoor. Against this backdrop, it is compelling to examine the impact of this incident on the bank's stock prices and assess the effectiveness of time series or other predictive models in capturing such intricate scenarios. The dataset under consideration spans monthly stock prices of Yes Bank from its inception, providing information on monthly closing, opening, highest, and lowest stock prices."
       ],
       "metadata": {
         "id": "DpeJGUA3kjGy"
@@ -391,7 +391,17 @@
     {
       "cell_type": "code",
       "source": [
-        "# Import Libraries"
+        "# Import Libraries\n",
+        "# Import Libraries\n",
+        "# Importing Libraries\n",
+        "import numpy as np               # For numerical operations on arrays and matrices\n",
+        "import pandas as pd              # For data manipulation and analysis\n",
+        "import matplotlib.pyplot as plt  # For basic data visualization\n",
+        "import seaborn as sns            # For statistical data visualization\n",
+        "plt.style.use('ggplot')          # Setting the plot style to 'ggplot'\n",
+        "import plotly.express as px      # For creating various interactive visualizations\n",
+        "\n",
+        "%matplotlib inline"
       ],
       "metadata": {
         "id": "M8Vqi-pPk-HR"
@@ -409,17 +419,6 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [
-        "# Load Dataset"
-      ],
-      "metadata": {
-        "id": "4CkvbW_SlZ_R"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "### Dataset First View"
@@ -431,7 +430,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset First Look"
+        "# Dataset First Look\n",
+        "stock_df.sample(5)"
       ],
       "metadata": {
         "id": "LWNFOSvLl09H"
@@ -451,7 +451,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Rows & Columns count"
+        "# Dataset Rows & Columns count\n",
+        "# Dataset Rows & Columns count\n",
+        "stock_df.shape"
       ],
       "metadata": {
         "id": "Kllu7SJgmLij"
@@ -471,7 +473,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Info"
+        "# Dataset Info\n",
+        "# Dataset Info\n",
+        "stock_df.info()"
       ],
       "metadata": {
         "id": "e9hRXRi6meOf"
@@ -491,7 +495,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Duplicate Value Count"
+        "# Dataset Duplicate Value Count\n",
+        "# Dataset Duplicate Value Count\n",
+        "stock_df.duplicated().value_counts()"
       ],
       "metadata": {
         "id": "1sLdpKYkmox0"
@@ -511,7 +517,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Missing Values/Null Values Count"
+        "# Missing Values/Null Values Count\n",
+        "stock_df.isna().sum()"
       ],
       "metadata": {
         "id": "GgHWkxvamxVg"
@@ -522,7 +529,11 @@
     {
       "cell_type": "code",
       "source": [
-        "# Visualizing the missing values"
+        "# Visualizing the missing values\n",
+        "plt.figure(figsize=(8, 6))\n",
+        "sns.heatmap(stock_df.isnull(), cmap='viridis',annot=True)\n",
+        "plt.title('Missing Values Heatmap')\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "3q5wnI3om9sJ"
@@ -542,7 +553,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "Open: The price at which a stock began trading when the market opened on a particular day.\n",
+        "\n",
+        "High: The highest price reached by a stock during a specific period.\n",
+        "\n",
+        "Low: The lowest price reached by a stock during a specific period.\n",
+        "\n",
+        "Date: The date corresponding to the stock price data.\n",
+        "\n",
+        "Close: The price of an individual stock when the stock exchange closed its market for the day. (Target/dependent variable)"
       ],
       "metadata": {
         "id": "gfoNAAC-nUe_"
@@ -560,7 +579,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Columns"
+        "# Dataset Columns\n",
+        "list(stock_df.columns)"
       ],
       "metadata": {
         "id": "j7xfkqrt5Ag5"
@@ -571,7 +591,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Describe"
+        "# Dataset Describe\n",
+        "stock_df.describe()"
       ],
       "metadata": {
         "id": "DnOaZdaE5Q5t"
@@ -591,7 +612,14 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "The dataset encompasses monthly records of Yes Bank stock prices since its debut on the stock exchange. It includes vital features such as:\n",
+        "\n",
+        "Date: Signifying the specific month under observation.\n",
+        "Open: Reflecting the stock's price at the inception of the trading day.\n",
+        "High: Denoting the peak price achieved by the stock within the month.\n",
+        "Low: Representing the minimum price recorded by the stock during the month.\n",
+        "Close: Indicating the stock's price at the conclusion of the trading day.\n",
+        "This dataset presents a panoramic view of Yes Bank's monthly performance, detailing its opening, highest, lowest, and closing prices since its inception on the stock exchange"
       ],
       "metadata": {
         "id": "aJV4KIxSnxay"
@@ -609,7 +637,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Check Unique Values for each variable."
+        "# Check Unique Values for each variable.\n",
+        "stock_df.nunique()"
       ],
       "metadata": {
         "id": "zms12Yq5n-jE"
@@ -638,10 +667,111 @@
     {
       "cell_type": "code",
       "source": [
-        "# Write your code to make your dataset analysis ready."
+        "\n",
+        "stock_df.columns"
       ],
       "metadata": {
         "id": "wk-9a2fpoLcV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Write your code to make your dataset analysis ready.\n",
+        "# Changing date colunn datatype to datetime format.\n",
+        "from datetime import datetime\n",
+        "\n",
+        "# parsing date which is string of format %b-%y to datetime (%b for Month as locale’s abbreviated name and %y for Year without century as a zero-padded decimal number.\n",
+        "stock_df['Date'] = stock_df['Date'].apply(lambda x: datetime.strptime(x, '%b-%y'))"
+      ],
+      "metadata": {
+        "id": "W7hkMcvyueyY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Extracting Year from Date column\n",
+        "stock_df['Year']=stock_df['Date'].dt.year\n",
+        "#Extracting Month from Date column\n",
+        "stock_df['Month']=stock_df['Date'].dt.month\n",
+        "#Extracting quarter from Date column\n",
+        "stock_df['Quarter']=stock_df['Date'].dt.quarter"
+      ],
+      "metadata": {
+        "id": "k6qHjNq2ulnW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define numerical columns\n",
+        "num_cols = stock_df.select_dtypes(include='number').columns\n",
+        "\n",
+        "# Plot box plots to check for outliers\n",
+        "fig, axes = plt.subplots(nrows=4, ncols=2, figsize=(14, 10), constrained_layout=True)\n",
+        "fig.suptitle('Box Plots for Numerical Columns', fontsize=16, color='navy')\n",
+        "\n",
+        "# Adjusting subplot parameters\n",
+        "fig.subplots_adjust(left=0.05, bottom=0.08, right=0.95, top=0.9, wspace=0.3, hspace=0.4)\n",
+        "\n",
+        "# Define colors for box plots\n",
+        "colors = ['#9400d3', '#7fffd4', 'lightgreen', '#ff7f50', 'orchid', 'lightcoral', 'lightseagreen', 'lightskyblue']\n",
+        "\n",
+        "# Iterating over each subplot\n",
+        "for ax, column, color in zip(axes.flatten(), num_cols, colors):\n",
+        "    # Plotting box plot for the current column\n",
+        "    sns.boxplot(x=stock_df[column], ax=ax, color=color, orient='h', linewidth=1.5)  # Using orient='h' for horizontal boxplot\n",
+        "    ax.set_title(column, fontsize=12, color='darkblue')  # Setting subplot title\n",
+        "    ax.set_xlabel('Values', fontsize=10, color='darkgreen')\n",
+        "    ax.set_ylabel('')  # No need for y-axis label for horizontal boxplot\n",
+        "    ax.grid(True, linestyle='--', alpha=0.7)\n",
+        "\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "Ig4WBjo0unF4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a separate DataFrame to store outliers\n",
+        "outliers_df = pd.DataFrame(columns=stock_df.columns)\n",
+        "\n",
+        "# Find outliers for each column\n",
+        "for column in stock_df.columns:\n",
+        "    Q1 = stock_df[column].quantile(0.25)\n",
+        "    Q3 = stock_df[column].quantile(0.75)\n",
+        "    IQR = Q3 - Q1\n",
+        "    outliers = stock_df[(stock_df[column] < (Q1 - 1.5 * IQR)) | (stock_df[column] > (Q3 + 1.5 * IQR))]\n",
+        "    outliers_df = pd.concat([outliers_df, outliers], ignore_index=True)\n",
+        "\n",
+        "# Display DataFrame containing outliers\n",
+        "print(\"DataFrame containing outliers:\")\n",
+        "print(outliers_df)"
+      ],
+      "metadata": {
+        "id": "_oLFRfMzu4cq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "stock_df.describe()"
+      ],
+      "metadata": {
+        "id": "nLmITv5gu-9B"
       },
       "execution_count": null,
       "outputs": []
@@ -658,7 +788,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "1. After transforming the 'Date' column from string format to a date object, we introduced a new column named 'Year' to capture the individual years extracted from each date entry.\n",
+        "2.Moreover, from the 'Date' column, we derived 'Month' and 'Quarter' variables to provide further insights into the temporal distribution of the data.\n",
+        "3.In the process of outlier analysis, it was observed that the dataset exhibited no outliers, indicating the robustness of the data distribution.\n",
+        "4.Furthermore, a thorough examination confirmed the absence of null values within the dataset, thus affirming its integrity and completeness.\n",
+        "5.The box plots vividly reveal outliers across all four columns, which have been subsequently extracted and stored in a separate dataframe. However, given the inherent volatility in stock prices, we refrain from categorizing these outliers as irrelevant. Instead, recognizing their potential utility, we retain them within our dataset for further analysis."
       ],
       "metadata": {
         "id": "LbyXE7I1olp8"
@@ -685,7 +819,32 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 1 visualization code"
+        "# Chart - 1 visualization code\n",
+        "# Chart - 1 visualization code\n",
+        "import plotly.graph_objects as go\n",
+        "\n",
+        "# Create a Figure object with Candlestick chart\n",
+        "fig = go.Figure(go.Candlestick(\n",
+        "    x=stock_df.index,            # x-axis values (dates)\n",
+        "    open=stock_df['Open'],       # open prices\n",
+        "    high=stock_df['High'],       # high prices\n",
+        "    low=stock_df['Low'],         # low prices\n",
+        "    close=stock_df['Close']      # close prices\n",
+        "))\n",
+        "\n",
+        "# Update the layout of the figure with a title\n",
+        "fig.update_layout(\n",
+        "    title={'text': 'Describing Price Movements', 'x': 0.5, 'y': 0.95, 'font': {'color': 'white', 'size': 20}},\n",
+        "    xaxis=dict(title='Year', title_font={'color': 'white', 'size': 16}, tickfont={'color': 'white', 'size': 12}),\n",
+        "    yaxis=dict(title='Price', title_font={'color': 'white', 'size': 16}, tickfont={'color': 'white', 'size': 12}),\n",
+        "    width=1200,\n",
+        "    height=800,\n",
+        "    plot_bgcolor='rgb(36, 40, 47)',  # Set the background color to a professional dark gray\n",
+        "    paper_bgcolor='rgb(51, 56, 66)'  # Set the paper color\n",
+        ")\n",
+        "\n",
+        "# Show the figure\n",
+        "fig.show()"
       ],
       "metadata": {
         "id": "7v_ESjsspbW7"
@@ -705,7 +864,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "Answer - The specific chart chosen in the provided code snippet is a Candlestick chart. Candlestick charts are commonly used in financial analysis to visualize the movement of stock prices over time. Each candlestick represents the open, high, low, and close prices for a specific period (e.g., day, week, month), providing valuable insights into price trends, volatility, and market sentiment.\n",
+        "\n",
+        "Here's why the Candlestick chart was chosen:\n",
+        "\n",
+        "Relevance to Financial Data: Candlestick charts are specifically designed to represent financial data, making them suitable for analyzing stock prices.\n",
+        "\n",
+        "Comprehensive Representation: Each candlestick encapsulates four essential price points (open, high, low, close), offering a comprehensive view of price movements within a given period.\n",
+        "\n",
+        "Easy Interpretation: Candlestick patterns are intuitive to interpret, allowing analysts to quickly identify trends, reversals, and potential trading opportunities.\n",
+        "\n",
+        "Visual Appeal: Candlestick charts are visually appealing and can effectively communicate complex price dynamics to stakeholders.\n",
+        "\n",
+        "Given that the goal is to describe price movements in the dataset, the Candlestick chart is a suitable choice due to its ability to provide a detailed and insightful representation of stock price data."
       ],
       "metadata": {
         "id": "XESiWehPqBRc"
@@ -723,7 +894,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "Answer - The analysis of Yes Bank's stock prices uncovers a distinctive narrative. Before 2018, the stock showcased a steadfast upward trajectory, signaling buoyant growth and reflecting a positive outlook among investors. However, a notable downturn ensued thereafter, chiefly attributed to the Yes Bank fraud case implicating Rana Kapoor, its former CEO.\n",
+        "\n",
+        "In the lead-up to 2018, the stock enjoyed a sustained ascent, underscoring favorable market sentiments and investor faith. Yet, the disclosure of the fraud case involving Rana Kapoor marked a pivotal juncture, precipitating a sharp decline in stock prices.\n",
+        "\n",
+        "The ramifications of the fraud case reverberated profoundly, significantly dampening investor confidence and trust in Yes Bank. Consequently, the stock witnessed a palpable depreciation, mirroring the adverse impact of the scandal on the company's reputation and financial well-being.\n",
+        "\n",
+        "In essence, the analysis underscores the divergent trajectories in Yes Bank's stock prices. Pre-2018, there was a consistent upward trend, whereas the post-2018 period saw a marked downturn due to the reverberations of the fraud case involving Rana Kapoor."
       ],
       "metadata": {
         "id": "C_j1G7yiqdRP"
@@ -742,7 +919,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "Answer - Insights from analyzing Yes Bank's stock prices can positively impact decision-making by informing strategies to navigate market volatility and rebuild investor confidence. However, the revelation of the fraud case involving Rana Kapoor damaged the bank's reputation, potentially leading to negative growth due to loss of trust and financial instability. Proactive measures to address these challenges are crucial for sustaining positive business impact and fostering growth."
       ],
       "metadata": {
         "id": "3cspy4FjqxJW"
@@ -760,7 +937,13 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 2 visualization code"
+        "# Chart - 2 visualization code\n",
+        "plt.figure(figsize=(6,5))\n",
+        "sns.distplot(stock_df['High'], color='red')\n",
+        "plt.title(\"Distribution\", fontsize=18)\n",
+        "plt.xlabel('High', fontsize=12)\n",
+        "plt.ylabel('Frequency', fontsize=12)\n",
+        "plt.show()\n"
       ],
       "metadata": {
         "id": "R4YgtaqtYklH"
@@ -780,11 +963,27 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        " To see the distribution and hence apply necessary operation to make it normally distributed as for regression problem normally distributed performs bestAnswer Here."
       ],
       "metadata": {
         "id": "5aaW0BYyYklI"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(6,5))\n",
+        "sns.distplot(np.log(stock_df['High']), color='pink')\n",
+        "plt.title(\"Distribution\", fontsize=16)\n",
+        "plt.xlabel('High', fontsize=12)\n",
+        "plt.ylabel('Frequency', fontsize=12)\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "A5d1jh3GwoFe"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -798,7 +997,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "A right-skewed distribution in stock price history suggests that lower prices are more common than higher prices, indicating potential for occasional significant gains but also higher volatility and risk. Investors should be cautious and conduct thorough analysis before making investment decisions.\n",
+        "\n",
+        "3. Will the gained insights help creating a positive business impact?\n",
+        "Ans - Yes, insights from the right-skewed distribution can help tailor investment strategies, manage risks, make informed decisions, and communicate effectively with investors, leading to positive business impact in finance.\n",
+        "\n",
+        "Are there any insights that lead to negative growth? Justify with specific reason.\n",
+        "Ans - Overconfidence in potential gains, underestimation of risks, lack of diversification, and ignoring fundamental analysis can lead to negative growth despite insights from a right-skewed distribution of stock prices."
       ],
       "metadata": {
         "id": "PSx9atu2YklI"
@@ -835,7 +1040,13 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 3 visualization code"
+        "# Chart - 3 visualization code\n",
+        "plt.figure(figsize=(6,5))\n",
+        "sns.distplot(stock_df['Open'], color='yellow')\n",
+        "plt.title(\"Distribution\", fontsize=16)\n",
+        "plt.xlabel('Open', fontsize=12)\n",
+        "plt.ylabel('Frequency', fontsize=12)\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "t6GMdE67YoAp"
